# krr-qemu

./: .gitignore  README.md  configure  cpus-common.c  gdbstub.c  hmp-commands-info.hx  hmp-commands.hx  meson.build  qemu-options.hx
kernel_rr/: README.md  Support-for-KRR-guest-recorder-patch  all-test-spdk.sh  all-test.sh  check_serialize.py  constants.py  dma.c  generate_symbol.sh  get_cost.py  graph_generator.py  kernel_rr.c  krr_trace_helper.c  list_iface_pci.sh  mem_log.c  meson.build  micro_generater.py  network.c  observer.py  observer_script.sh  observer_script_spdk.sh  observser_script.sh  replay_debugging.c  rr_gen_replay_symbols.py  send_qmp.py  verifier.c
kernel_rr/test_data/: micro_syscall.csv  micro_syscall_large.csv  redis-get-avg_latency.csv  redis-get-redisthroughput.csv  redis-get-throughput.csv  redis-set-avg_latency.csv  redis-set-throughput.csv  rocksdb-fillrandom-latency.csv  rocksdb-fillrandom-opsps.csv  rocksdb-fillrandom-throughput.csv  rocksdb-fillseq-latency.csv  rocksdb-fillseq-opsps.csv  rocksdb-fillseq-throughput.csv  rocksdb-readrandom-latency.csv  rocksdb-readrandom-opsps.csv  rocksdb-readseq-latency.csv  rocksdb-readseq-opsps.csv  rocksdb-readwhilewriting-latency.csv  rocksdb-readwhilewriting-opsps.csv  rocksdb-readwhilewriting-throughput.csv  rocksdb_kernel_bypass-fillrandom-latency.csv  rocksdb_kernel_bypass-fillrandom-opsps.csv  rocksdb_kernel_bypass-fillrandom-throughput.csv  rocksdb_kernel_bypass-fillseq-latency.csv  rocksdb_kernel_bypass-fillseq-opsps.csv  rocksdb_kernel_bypass-fillseq-throughput.csv  (+2 more)
migration/: migration.c  (+4 more)
(+51 files in other folders)
